[package]
name = "rust_task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "parallelizator"
path = "src/lib.rs"

[dependencies]
num_cpus = "1.0"
rayon = "1.7"
crossbeam = "0.8.2"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"

[[bench]]
name = "benchmark"
harness = false